<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="blank"></string>
	<string name="app_name">Auksalaq</string>
	<string name="welcome">Welcome to Nomads.</string>
	<string name="login">Log in</string>
	<string name="loginPrompt">
	    Not able to connect to Nomads server.
	    \nPlease check network settings and try again.
	    </string>
	<string name="connectButton">Refresh</string>
    <string name="connected">Connected to Nomads server.</string>
    <string name="hint">Enter a message.</string>
    <string name="sendButton">Send</string>
    <string name="test">test</string>
    <string name="testTones">Tones</string>
    <string name="testDroplets">Droplets</string>
    <string name="discuss">Discuss</string>
    <string name="cloud">Send to Cloud</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="connectionStatus">Connection status:</string>
    <string name="nomadsInfo">
        This app was created by the
        \n<b>Nomads</b> Team
        \nUniversity of Virginia, 2012</string>
	<string name="nomadsLink"><a href="http://nomads.music.virginia.edu"><b>Nomads</b> Team</a></string>
	<string name="linkButton">Nomads on the web</string>
	<string name="quitButton">Close connection and quit</string>
</resources>