<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:keepScreenOn="true">
    
    <TextView
        android:id="@+id/chatWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
    
    <com.nomads.Dot
	    android:id="@+id/dot"
	    android:tag="trueDot"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/buttonDiscuss"
        android:src="@drawable/discuss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/discuss"/>

    <ImageButton
        android:id="@+id/buttonCloud"
        android:src="@drawable/cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/buttonDiscuss"
        android:contentDescription="@string/cloud" />
    
    <Button
        android:id="@+id/buttonAudioTest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/buttonCloud"
        android:text="@string/testTones" />
    
    <Button
        android:id="@+id/buttonAudioTest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/buttonAudioTest1"
        android:text="@string/testDroplets" />
    
    <ImageButton
        android:id="@+id/buttonSettings"
        android:src="@drawable/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/settings" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/buttonLinearLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/buttonDiscuss">
	    <Button
		    android:id="@+id/sendDiscuss"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/discuss"
		    android:visibility="gone" />
		<Button
		    android:id="@+id/sendCloud"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cloud"
		    android:visibility="gone" />
		<Button
		    android:id="@+id/cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel"
		    android:visibility="gone" />
	</LinearLayout>
	
	<EditText
	    android:id="@+id/message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/buttonLinearLayout"
	    android:hint="@string/hint"
	    android:inputType="text"
	    android:text="@string/blank"
	    android:visibility="gone" />
	
	<TextView
        android:id="@+id/prompt"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/message"
        android:text=""
        android:visibility="gone" />

</RelativeLayout>