<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >
    
	<ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/nomadslogo_512"
        android:contentDescription="@string/welcome" />

	<TextView
	    android:id="@+id/joinStatus"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/loginPrompt" />
	
	<Button
	    android:id="@+id/test"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/joinStatus"
	    android:layout_alignParentRight="true"
	    android:text="@string/test" />

</RelativeLayout>