<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom">
    
    <TextView
        android:id="@+id/prompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" />

	<EditText
	    android:id="@+id/message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/prompt"
	    android:ems="10"
	    android:hint="@string/hint"
	    android:inputType="text"
	    android:text="@string/outgoing" />
	
	<Button
	    android:id="@+id/ok"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/message"
	    android:text="@string/test" />
	
	<Button
	    android:id="@+id/cancel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/message"
	    android:layout_toRightOf="@id/ok"
	    android:text="@string/cancel" />
	
</RelativeLayout>